<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/textViewNow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCityName" />

    <TextView
        android:id="@+id/textViewCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewCityName"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewWeatherIcon"
        android:layout_width="142dp"
        android:layout_height="105dp"
        android:layout_marginStart="36dp"
        android:contentDescription="@string/show_weather_icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNow"
        app:srcCompat="@drawable/cloudy_icon" />

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="48dp"
        android:text="@string/textVewTemperature"
        android:textSize="62sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageViewWeatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/textViewTextWeather" />

    <TextView
        android:id="@+id/textViewTempMesur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTempMesur"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewDate"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/textViewAngle"
        app:layout_constraintTop_toTopOf="@+id/textViewAngle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewAngle"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/textViewTemperature"
        app:layout_constraintTop_toTopOf="@+id/textViewTemperature" />

    <TextView
        android:id="@+id/textViewTextWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTextWeather"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageViewWeatherIcon"
        app:layout_constraintStart_toStartOf="@+id/imageViewWeatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWeatherIcon" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textViewTime"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/textViewNow"
        app:layout_constraintTop_toTopOf="@+id/textViewNow" />

    <TextView
        android:id="@+id/textViewDayOfWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewDayOfWeek"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewDate"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewDayOfWeek" />

</androidx.constraintlayout.widget.ConstraintLayout>